add important tip

--- a/notebooks/DEMO_extract_gene_list_from_screen_copied_MitCOM_data.ipynb
+++ b/notebooks/DEMO_extract_gene_list_from_screen_copied_MitCOM_data.ipynb
@@ -19,7 +19,7 @@
     "\n",
     ">\"Simultaneously, a list of 20 proteins exhibiting the highest Pearson correlation with the selected target peak segment is displayed.\"\n",
     "\n",
-    "If you click to the left of the square to the left of first protein listed, skipping the header of the list, and then while holding down the left mouse button swipe down and to the right. Only the first two columns will look like they are selected; however, it isn't the case, as you'll see.\n",
+    "If you click to the left of the square to the left of first protein listed, skipping the header of the list, and then while holding down the left mouse button swipe down and to the right. Only the first two columns will look like they are selected; however, it isn't the case, as you'll see.  (**Important tips: don't click inside a cell when doing this selection process.** I found it impossible to unselect without starting over, and once you click in a box and get the red highlighted box, the text in that cell is the only thing you seem to be able to copy form the interface.\n",
     "\n",
     "You'll have something like this in your text file:\n",
     "\n",
