--- a/notebooks/DEMO_extract_gene_list_from_screen_copied_MitCOM_data.ipynb
+++ b/notebooks/DEMO_extract_gene_list_from_screen_copied_MitCOM_data.ipynb
@@ -38,7 +38,7 @@
     "\n",
     ">\"Simultaneously, a list of 20 proteins exhibiting the highest Pearson correlation with the selected target peak segment is displayed.\"\n",
     "\n",
-    "If you click to the left of the square to the left of first protein listed, skipping the header of the list, and then while holding down the left mouse button swiping down, using the scroll wheel to keep moving down the table, and to the right. The image that can be toggled below illustrates this if it is unclear:\n",
+    "If you click to the left of the checkbox square to the left of first protein listed, skipping the header of the list, and then while holding down the left mouse button swiping down, using the scroll wheel to keep moving down the table, and to the right. The image that can be toggled below illustrates the steps of the selection process if it is unclear:\n",
     "\n",
     "<details>\n",
     "  <summary>Click here to reveal the image illustrating how to select.</summary>\n",
@@ -46,7 +46,11 @@
     "  ![indicate_where_to click.png](attachment:8af358cb-8a6b-4714-8a6c-992dc5650530.png)\n",
     "</details>\n",
     "\n",
-    "Only the first two columns will look like they are selected; however, it isn't the case, as you'll see.  (**Important tips: don't click inside a cell when doing this selection process.** I found it impossible to unselect without starting over, and once you click in a box and get the red highlighted box, the text in that cell is the only thing you seem to be able to copy form the interface.\n",
+    "Note you don't have to be too concerned if you are to the left of the checkbox square, as long as you are to the left of the first text on the first line. (The script will disregard any empty space before the first instance of text, and so the specific spot you click first isn't a big issue.)\n",
+    "\n",
+    "Only the first two columns will look like they are selected; however, it isn't the case, as you'll see.  (**Important tip: don't click inside a cell when doing this selection process.** I found it impossible to unselect without starting over, and once you click in a box and get the red highlighted box, the text in that cell is the only thing you seem to be able to copy form the interface.)\n",
+    "\n",
+    "When the selection is complete, copy the selection and paste it as text into your favorite text editor or coding environment.\n",
     "\n",
     "You'll have something like this in your text file:\n",
     "\n",
@@ -167,7 +171,7 @@
     "Cysteine--tRNA ligase (EC 6.1.1.16) (Cysteinyl-tRNA synthetase) (CysRS)\tYNL247W N0885\t87530\t23\t0.636\n",
     "```\n",
     "\n",
-    "(Note depending on where you click on the first line, you may have an empty line first or not. The script will disregard the first empty space and so it isn't an issue.)\n",
+    "(Note depending on where you click on the first line, you may have an empty line first or not. The script will disregard any empty space before the first instance of text, and so it isn't an issue.)\n",
     "\n",
     "Save that file where you want to run the script.\n",
     "\n",
