highlight toggle-able section

--- a/notebooks/DEMO_extract_gene_list_from_screen_copied_MitCOM_data.ipynb
+++ b/notebooks/DEMO_extract_gene_list_from_screen_copied_MitCOM_data.ipynb
@@ -28,7 +28,7 @@
     "It should look something like you can see by toggling open the view immediately below where it says 'Click here to reveal the large image'.\n",
     "\n",
     "<details>\n",
-    "  <summary>Click here to reveal the large image.</summary>\n",
+    "  <summary>✚<b>Click here to reveal the large image.</b></summary>\n",
     "  \n",
     " ![example_selected_correlation_initial_view.png](attachment:44a309a8-c8ca-4e90-9384-1b76e98fff34.png)\n",
     "</details>\n",
@@ -41,7 +41,7 @@
     "If you click to the left of the checkbox square to the left of first protein listed, skipping the header of the list, and then while holding down the left mouse button swiping down, using the scroll wheel to keep moving down the table, and to the right. The image that can be toggled below illustrates the steps of the selection process if it is unclear:\n",
     "\n",
     "<details>\n",
-    "  <summary>Click here to reveal the image illustrating how to select.</summary>\n",
+    "    <summary>✚<b>Click here to reveal the image illustrating how to select.</b></summary>\n",
     "  \n",
     "  ![indicate_where_to click.png](attachment:8af358cb-8a6b-4714-8a6c-992dc5650530.png)\n",
     "</details>\n",
